aggiunta di due metodi (reject e cancel offer) per concludere la feature nel backend.